<resources>
    <string name="app_name">FlixList</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_discover">Discover</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_title">Movie Title</string>
    <string name="dummy_release">Release: 2024-01-01</string>
    <string name="dummy_genre">Genres: Action, Adventure</string>
    <string name="dummy_overview">Movie overview goes here...</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_movie">Temukan Film Favoritmu</string>
</resources>