<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_now_playing_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_playing_list"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_now_playing_movie"
            app:layout_constraintStart_toStartOf="@id/tv_now_playing_movie"
            app:layout_constraintEnd_toEndOf="@id/tv_now_playing_movie"/>

        <TextView
            android:id="@+id/tv_popular_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_now_playing_movie"
            app:layout_constraintTop_toBottomOf="@id/rv_now_playing_list"
            app:layout_constraintStart_toStartOf="@id/tv_now_playing_movie"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_list"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_popular_movie"
            app:layout_constraintStart_toStartOf="@id/tv_popular_movie"
            app:layout_constraintEnd_toEndOf="@id/tv_popular_movie"/>

        <TextView
            android:id="@+id/tv_top_rated_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/top_rated"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_now_playing_movie"
            app:layout_constraintTop_toBottomOf="@id/rv_popular_list"
            app:layout_constraintStart_toStartOf="@id/tv_now_playing_movie"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated_list"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_top_rated_movie"
            app:layout_constraintStart_toStartOf="@id/tv_top_rated_movie"
            app:layout_constraintEnd_toEndOf="@id/tv_top_rated_movie"/>

        <TextView
            android:id="@+id/tv_upcoming_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_now_playing_movie"
            app:layout_constraintTop_toBottomOf="@id/rv_top_rated_list"
            app:layout_constraintStart_toStartOf="@id/tv_now_playing_movie"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_list"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming_movie"
            app:layout_constraintStart_toStartOf="@id/tv_upcoming_movie"
            app:layout_constraintEnd_toEndOf="@id/tv_upcoming_movie"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>